--- a/CoralReefsClassificationGroup4.ipynb
+++ b/CoralReefsClassificationGroup4.ipynb
@@ -6,7 +6,7 @@
       "name": "CoralReefsClassificationGroup4.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOtgEf2tZff+XFPOF7Y2Uuf",
+      "authorship_tag": "ABX9TyN34rqxkhkot8XnJnMNm9Ps",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -15,7 +15,9 @@
     },
     "language_info": {
       "name": "python"
-    }
+    },
+    "accelerator": "GPU",
+    "gpuClass": "standard"
   },
   "cells": [
     {
@@ -30,14 +32,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "wBH_LXakZzy1"
       },
       "outputs": [],
       "source": [
-        ""
+        "import tensorflow as tf\n",
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "import seaborn as sns \n",
+        "import matplotlib"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "67H4HSzicleM"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
