Testing importing of images

--- a/CoralReefsClassificationGroup4.ipynb
+++ b/CoralReefsClassificationGroup4.ipynb
@@ -6,7 +6,8 @@
       "name": "CoralReefsClassificationGroup4.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyN34rqxkhkot8XnJnMNm9Ps",
+      "mount_file_id": "1-6PoXbAC6cd0Au0x_4EhLgnk2psre-il",
+      "authorship_tag": "ABX9TyOPfG1wLxvCawmDQDEu16ke",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,7 +33,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 40,
       "metadata": {
         "id": "wBH_LXakZzy1"
       },
@@ -42,7 +43,95 @@
         "import pandas as pd\n",
         "import numpy as np\n",
         "import seaborn as sns \n",
-        "import matplotlib"
+        "from matplotlib import pyplot as plt\n",
+        "from google.colab import drive\n",
+        "import cv2 as cv\n",
+        "from tqdm import tqdm\n",
+        "import os\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "drive.mount('/content/drive')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "67H4HSzicleM",
+        "outputId": "efa385ed-83bc-4c7f-c35c-c1ea18f2765a"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n",
+            "[Errno 2] No such file or directory: '/gdrive'\n",
+            "/content\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "path = '/content/drive/MyDrive/Data/IND_MDV'"
+      ],
+      "metadata": {
+        "id": "z7o9pa59eE14"
+      },
+      "execution_count": 37,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "AllImgs = []"
+      ],
+      "metadata": {
+        "id": "LOw63HXdmwoh"
+      },
+      "execution_count": 43,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for file in tqdm(os.listdir(path)):\n",
+        "  imgs = cv.imread(file)\n",
+        "  AllImgs.append(imgs)\n",
+        "len(AllImgs)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "mmLg5nl5fwN1",
+        "outputId": "98780418-eeeb-4167-e123-67a1bed35d71"
+      },
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "100%|██████████| 1612/1612 [00:00<00:00, 222591.54it/s]\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1612"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 44
+        }
       ]
     },
     {
@@ -51,7 +140,7 @@
         ""
       ],
       "metadata": {
-        "id": "67H4HSzicleM"
+        "id": "EdetlPUBlbM8"
       },
       "execution_count": null,
       "outputs": []
